--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
   intl: ^0.20.1
   json_annotation: ^4.9.0
   permission_handler: ^11.3.1
+  pinput: ^5.0.0
   shared_preferences: ^2.3.3
   skeletonizer: ^1.4.2
+  wolt_modal_sheet: ^0.9.4
 
 dev_dependencies:
   build_runner: ^2.4.13
