--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ dependencies:
   fpdart: ^1.1.1
   get_it: ^8.0.2
   go_router: ^14.6.2
+  image_picker: ^1.1.2
   injectable: ^2.5.0
-  intl: ^0.20.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
+  local_auth: ^2.3.0
   permission_handler: ^11.3.1
   pinput: ^5.0.0
   shared_preferences: ^2.3.3
