--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   intl: ^0.19.0
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
+  lucide_icons: ^0.257.0
   permission_handler: ^11.3.1
   pinput: ^5.0.0
   shared_preferences: ^2.3.3
