--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_exit_app: ^1.1.4
+  flutter_markdown: ^0.7.4+3
   flutter_material_design_icons: ^1.1.7447
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.2
@@ -30,7 +31,7 @@ dependencies:
   lucide_icons: ^0.257.0
   permission_handler: ^11.3.1
   pinput: ^5.0.0
-  shared_preferences: ^2.3.3
+  shared_preferences: ^2.3.4
   skeletonizer: ^1.4.2
   wolt_modal_sheet: ^0.9.4
 
