--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cached_network_image: ^3.4.1
   dio: ^5.7.0
   equatable: ^2.0.7
+  fl_chart: ^0.70.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
