--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.4.1
+  csv: ^6.0.0
   dio: ^5.7.0
   equatable: ^2.0.7
   fl_chart: ^0.70.0
@@ -32,6 +33,7 @@ dependencies:
   lucide_icons: ^0.257.0
   permission_handler: ^11.3.1
   pinput: ^5.0.0
+  share_plus: ^10.1.3
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.2
   wolt_modal_sheet: ^0.9.4
