--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   csv: ^6.0.0
   dio: ^5.7.0
   equatable: ^2.0.7
+  file_picker: ^8.1.7
   fl_chart: ^0.70.0
   flutter:
     sdk: flutter
