--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   lucide_icons: ^0.257.0
+  path_provider: ^2.1.1
   permission_handler: ^11.3.1
   pinput: ^5.0.0
   share_plus: ^10.1.3
