--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
   pinput: ^5.0.0
+  qr_flutter: ^4.1.0
   share_plus: ^10.1.3
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.2
