--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   share_plus: ^10.1.3
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.2
+  url_launcher: ^6.3.1
   wolt_modal_sheet: ^0.9.4
 
 dev_dependencies:
