--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   wolt_modal_sheet: ^0.10.0
   dio_cookie_manager: ^3.1.1
   cookie_jar: ^4.0.8
+  omni_datetime_picker: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.13
