--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 dependencies:
   cached_network_image: ^3.4.1
+  cookie_jar: ^4.0.8
   csv: ^6.0.0
   dio: ^5.7.0
+  dio_cookie_manager: ^3.1.1
   equatable: ^2.0.7
   file_picker: ^8.1.7
   fl_chart: ^0.70.0
@@ -32,18 +34,17 @@ dependencies:
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   lucide_icons: ^0.257.0
+  omni_datetime_picker: ^1.1.0
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
   pinput: ^5.0.0
   qr_flutter: ^4.1.0
+  screwdriver: ^5.9.0
   share_plus: ^10.1.3
   shared_preferences: ^2.3.4
   skeletonizer: ^1.4.2
   url_launcher: ^6.3.1
   wolt_modal_sheet: ^0.10.0
-  dio_cookie_manager: ^3.1.1
-  cookie_jar: ^4.0.8
-  omni_datetime_picker: ^1.1.0
 
 dev_dependencies:
   build_runner: ^2.4.13
