--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   csv: ^6.0.0
   dio: ^5.7.0
   dio_cookie_manager: ^3.1.1
+  envied: ^1.0.1
   equatable: ^2.0.7
   file_picker: ^8.1.7
   fl_chart: ^0.70.0
@@ -50,6 +51,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.13
   change_app_package_name: ^1.4.0
+  envied_generator: ^1.0.1
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
