--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  board_datetime_picker: ^2.3.0
   cached_network_image: ^3.4.1
   cookie_jar: ^4.0.8
   csv: ^6.0.0
