--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.0.2
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.6.1
 
 dependencies:
   board_datetime_picker: ^2.3.0
@@ -37,6 +37,7 @@ dependencies:
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   lucide_icons: ^0.257.0
+  path: ^1.9.0
   path_provider: ^2.1.1
   permission_handler: ^11.3.1
   pinput: ^5.0.0
