--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,8 @@
 include: package:flutter_lints/flutter.yaml
 analyzer:
+  exclude:
+    - "**.freezed.dart"
+    - "**.g.dart"
+    - "**.gr.dart"
   errors:
     use_build_context_synchronously: ignore
