--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,8 @@ android {
             // so `flutter run --release` works.
             signingConfig = signingConfigs.debug
             signingConfig = signingConfigs.release
+            shrinkResources false
+            minifyEnabled false
         }
     }
 }
