--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cached_network_image: ^3.4.1
   cookie_jar: ^4.0.8
   csv: ^6.0.0
+  curved_navigation_bar: ^1.0.6
   dio: ^5.7.0
   dio_cookie_manager: ^3.1.1
   envied: ^1.0.1
