--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pulsehub
 description: "A new Flutter project."
 publish_to: "none"
-version: 0.0.2
+version: 0.0.7+8
 
 environment:
   sdk: ^3.6.1
