--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,14 @@ dependencies:
   fpdart: ^1.1.1
   get_it: ^8.0.2
   go_router: ^14.6.2
-  image_picker: ^1.1.2
+  image_picker: ^1.0.7
   injectable: ^2.5.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   lucide_icons: ^0.257.0
   path: ^1.9.0
-  path_provider: ^2.1.1
+  path_provider: ^2.1.2
   permission_handler: ^11.3.1
   pinput: ^5.0.0
   qr_flutter: ^4.1.0
@@ -49,6 +49,10 @@ dependencies:
   skeletonizer: ^1.4.2
   url_launcher: ^6.3.1
   wolt_modal_sheet: ^0.10.0
+  photo_view: ^0.14.0
+  touchable: ^1.0.2
+  matrix_gesture_detector: ^0.2.0-nullsafety.1
+  image: ^4.1.7
 
 dev_dependencies:
   build_runner: ^2.4.13
