--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   cached_network_image: ^3.4.1
   cookie_jar: ^4.0.8
   csv: ^6.0.0
-  curved_navigation_bar: ^1.0.6
+  curved_labeled_navigation_bar: ^2.0.5
   dio: ^5.7.0
   dio_cookie_manager: ^3.1.1
   envied: ^1.0.1
@@ -32,27 +32,27 @@ dependencies:
   fpdart: ^1.1.1
   get_it: ^8.0.2
   go_router: ^14.6.2
+  image: ^4.1.7
   image_picker: ^1.0.7
   injectable: ^2.5.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
   local_auth: ^2.3.0
   lucide_icons: ^0.257.0
+  matrix_gesture_detector: ^0.2.0-nullsafety.1
   path: ^1.9.0
   path_provider: ^2.1.2
   permission_handler: ^11.3.1
+  photo_view: ^0.15.0
   pinput: ^5.0.0
   qr_flutter: ^4.1.0
   screwdriver: ^5.9.0
   share_plus: ^10.1.3
   shared_preferences: ^2.3.5
   skeletonizer: ^1.4.2
+  touchable: ^1.0.2
   url_launcher: ^6.3.1
   wolt_modal_sheet: ^0.10.0
-  photo_view: ^0.15.0
-  touchable: ^1.0.2
-  matrix_gesture_detector: ^0.2.0-nullsafety.1
-  image: ^4.1.7
 
 dev_dependencies:
   build_runner: ^2.4.13
